React Native App

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Where football fans get their news."
   }
 }
